--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -93,6 +93,11 @@ under the License.
 			<version>1.14.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-java_2.12</artifactId>
 			<version>1.14.0</version>
